[package]
name = "bevy_cgol"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.3"
bevy_egui = "0.33.0"
bevy_life = "0.11.0"
bevy_spatial = "0.10.0"
rand = "0.9.0"
rayon = "1.10.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
